--- a/looplist/Base.lproj/Main_iPhone.storyboard
+++ b/looplist/Base.lproj/Main_iPhone.storyboard
@@ -472,7 +472,7 @@
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
                                 </subviews>
                                 <inset key="contentInset" minX="0.0" minY="80" maxX="0.0" maxY="0.0"/>
