--- a/looplist/Base.lproj/Main_iPhone.storyboard
+++ b/looplist/Base.lproj/Main_iPhone.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="8YX-ce-x5E">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <scenes>
@@ -33,7 +32,7 @@
                             <tableViewSection id="gEa-yG-bHg">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="sSO-bL-2hk" detailTextLabel="a4u-m4-w8e" style="IBUITableViewCellStyleValue1" id="p1m-KY-Czx">
-                                        <rect key="frame" x="0.0" y="99" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="35" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="p1m-KY-Czx" id="tP1-vQ-s8g">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
@@ -63,7 +62,7 @@
                             <tableViewSection id="hNb-pF-gPs">
                                 <cells>
                                     <tableViewCell hidden="YES" contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="aPb-mp-A2z" detailTextLabel="AoI-yN-Ua5" style="IBUITableViewCellStyleValue1" id="2hx-Dl-0NY">
-                                        <rect key="frame" x="0.0" y="163" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="99" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2hx-Dl-0NY" id="VS5-IB-fXF">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
@@ -94,7 +93,7 @@
                             <tableViewSection id="0Tk-nu-vcD">
                                 <cells>
                                     <tableViewCell hidden="YES" contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="LfS-Ql-xwQ" detailTextLabel="crW-Ws-Yv8" style="IBUITableViewCellStyleValue1" id="faE-YR-0Ub">
-                                        <rect key="frame" x="0.0" y="227" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="163" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="faE-YR-0Ub" id="eVg-et-kcd">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
@@ -125,7 +124,7 @@
                             <tableViewSection id="8jd-fD-sI8">
                                 <cells>
                                     <tableViewCell hidden="YES" contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="KDK-3c-ob1" detailTextLabel="aQ1-ur-cuW" style="IBUITableViewCellStyleValue1" id="E3e-E7-5wJ">
-                                        <rect key="frame" x="0.0" y="291" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="227" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="E3e-E7-5wJ" id="TYD-0J-T3f">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
@@ -411,11 +410,11 @@
                             </imageView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="4UP-dY-esx" customClass="LLTouchScrollView">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" id="ve0-gv-2jx">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                         <subviews>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="New Item" minimumFontSize="17" clearButtonMode="whileEditing" id="b8A-H5-AMg">
                                                 <rect key="frame" x="52" y="15" width="206" height="33"/>
@@ -471,6 +470,11 @@
                                                     <action selector="colorLabelTouchUp:" destination="deB-OE-Y5t" eventType="touchUpInside" id="jrg-NO-N6Q"/>
                                                 </connections>
                                             </button>
+                                            <view contentMode="scaleToFill" id="hmp-bp-7V0">
+                                                <rect key="frame" x="0.0" y="78" width="320" height="1"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                                <color key="backgroundColor" red="0.90196084980000002" green="0.8980392814" blue="0.86274516580000005" alpha="1" colorSpace="deviceRGB"/>
+                                            </view>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
@@ -485,6 +489,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="attachImageView" destination="b7g-sH-4pK" id="QtG-Vf-fi9"/>
+                        <outlet property="baseviewInScrollView" destination="ve0-gv-2jx" id="y3h-3y-g8c"/>
                         <outlet property="captionTextField" destination="b8A-H5-AMg" id="GrD-H5-vdd"/>
                         <outlet property="checkedDateLabel" destination="Hhi-aN-Wef" id="zzr-KP-FTt"/>
                         <outlet property="colorLabelButton" destination="g6Z-4u-55k" id="WRE-LS-wWO"/>
@@ -600,7 +605,7 @@
                         </view>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="fm2-IG-6gz">
-                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fm2-IG-6gz" id="g5V-1Y-QdD">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
