--- a/looplist/RootView/Base.lproj/LLCheckItemCell.xib
+++ b/looplist/RootView/Base.lproj/LLCheckItemCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -13,6 +13,10 @@
                 <rect key="frame" x="0.0" y="0.0" width="253" height="91"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="pix-Rt-XWL">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="91"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
+                    </imageView>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="left" text="999" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3">
                         <rect key="frame" x="5" y="28" width="36" height="36"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -55,15 +59,22 @@
                 </subviews>
             </tableViewCellContentView>
             <connections>
+                <outlet property="attachImageView" destination="pix-Rt-XWL" id="SFf-7b-0JB"/>
                 <outlet property="captionTextField" destination="335" id="341"/>
                 <outlet property="checkedDateLabel" destination="20" id="338"/>
                 <outlet property="checkmarkImageView" destination="351" id="352"/>
                 <outlet property="colorLabelButton" destination="342" id="349"/>
                 <outlet property="numberLabel" destination="3" id="339"/>
             </connections>
+            <point key="canvasLocation" x="-24" y="-339"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="checkmark.png" width="42" height="32"/>
     </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
